--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "chart.js": "^2.7.2",
+    "export-from-json": "^1.0.14",
     "prop-types": "^15.6.1",
+    "random-color": "^1.0.1",
     "react": "^16.3.2",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.3.2",
